--- a/requirements.txt
+++ b/requirements.txt
@@ -8,18 +8,23 @@ click==8.1.7
 click-didyoumean==0.3.1
 click-plugins==1.1.1
 click-repl==0.3.0
+coverage==7.6.1
 Django==5.1
 django-cors-headers==4.4.0
 djangorestframework==3.15.2
 djangorestframework-simplejwt==5.3.1
 drf-yasg==1.21.7
+flake8==7.1.1
 idna==3.8
 inflection==0.5.1
 kombu==5.4.0
+mccabe==0.7.0
 packaging==24.1
 pillow==10.4.0
 prompt_toolkit==3.0.47
 psycopg2-binary==2.9.9
+pycodestyle==2.12.1
+pyflakes==3.2.0
 PyJWT==2.9.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
