--- a/requirements.txt
+++ b/requirements.txt
@@ -9,8 +9,11 @@ click-didyoumean==0.3.1
 click-plugins==1.1.1
 click-repl==0.3.0
 coverage==7.6.1
+cron-descriptor==1.4.5
 Django==5.1
+django-celery-beat==2.7.0
 django-cors-headers==4.4.0
+django-timezone-field==7.0
 djangorestframework==3.15.2
 djangorestframework-simplejwt==5.3.1
 drf-yasg==1.21.7
@@ -26,10 +29,12 @@ psycopg2-binary==2.9.9
 pycodestyle==2.12.1
 pyflakes==3.2.0
 PyJWT==2.9.0
+python-crontab==3.2.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytz==2024.1
 PyYAML==6.0.2
+redis==5.0.8
 requests==2.32.3
 setuptools==74.0.0
 six==1.16.0
