--- a/.env.sample
+++ b/.env.sample
@@ -2,11 +2,11 @@ SECRET_KEY=
 
 DEBUG=
 
-NAME=
+POSTGRES_DB=
 POSTGRES_USER=
-PASSWORD=
-HOST=
-PORT=
+POSTGRES_PASSWORD=
+POSTGRES_HOST=
+POSTGRES_PORT=
 
 LOCATION=
 
